my/target/test/cgdb-scan/2022-04-20-222227-54882-1/failures/clang_other_error_EuaVCF.ii.stderr.txt
test/cc/glog.cc:8:10: fatal error: 'glog/logging.h' file not found
#include <glog/logging.h>
         ^~~~~~~~~~~~~~~~
1 error generated.
